--- a/Concierge.html
+++ b/Concierge.html
@@ -52,7 +52,10 @@
 <body>
 <div class="container-fluid px-4 mt-3">
     <div class="d-flex justify-content-between align-items-center border-bottom border-secondary pb-2 mb-4">
-        <h4 class="mb-0 d-flex align-items-center" style="letter-spacing: 3px;">H.O.P. CONCIERGE</h4>
+        <h4 class="mb-0 d-flex align-items-center" style="letter-spacing: 3px;">
+    <img src="logo-hop.jpg" alt="Logo" style="height: 40px; margin-right: 15px; border-radius: 5px;">
+    H.O.P. CONCIERGE
+</h4>
         <div class="d-flex gap-2">
             <button class="btn btn-warning btn-sm px-3 fw-bold" onclick="openManualModal()">+ INSERIMENTO MANUALE</button>
             <a href="deposit.html" class="btn btn-outline-light btn-sm px-3 fw-bold" style="border: 1px solid #c5a059; color: #c5a059;">DEPOSITO</a>
@@ -253,3 +256,4 @@
 </script>
 </body>
 </html>
+
