--- a/Concierge.html
+++ b/Concierge.html
@@ -53,7 +53,7 @@
 <div class="container-fluid px-4 mt-3">
     <div class="d-flex justify-content-between align-items-center border-bottom border-secondary pb-2 mb-4">
         <h4 class="mb-0 d-flex align-items-center" style="letter-spacing: 3px;">
-    <img src="logo-hop.jpg" alt="Logo" style="height: 40px; margin-right: 15px; border-radius: 5px;">
+    <img src="logo-hop.png" alt="Logo" style="height: 40px; margin-right: 15px; border-radius: 5px;">
     H.O.P. CONCIERGE
 </h4>
         <div class="d-flex gap-2">
@@ -256,4 +256,5 @@
 </script>
 </body>
 </html>
+
 
